--- a/requirements.txt
+++ b/requirements.txt
@@ -12,13 +12,13 @@ lazy-object-proxy==1.3.1
 lxml==3.6.0
 mccabe==0.6.1
 olefile==0.44
-parso==0.1.1
+parso>=0.1.1
 pathtools==0.1.2
-Pillow==4.2.1
+Pillow>=4.2.1,<5
 Pygments==2.1.3
 pylint==1.8.3
 pyocr==0.4.7
-PyYAML==3.11
+PyYAML~=3
 singledispatch==3.4.0.3
 six==1.11.0
 svg.path==2.1.1
